anonymization/main/default/objects/TEKCO_OrgConfig__mdt/TEKCO_OrgConfig__mdt.object-meta.xml
<CustomObject>
    <label>TEKCO Org Config</label>
    <pluralLabel>TEKCO Org Configs</pluralLabel>
</CustomObject>