anonymization/main/default/objects/TEKCO_OrgConfig__mdt/fields/TEKCO_BrandCodeField__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_BrandCodeField__c</fullName>
    <label>Brand Code Field API Name</label>
    <helpText>Field on the brand object that holds the brand code/name shown in the UI (e.g. Name or ALH_BrandCode__c).</helpText>
    <length>255</length>
    <type>Text</type>
</CustomField>