anonymization/main/default/objects/TEKCO_OrgConfig__mdt/fields/TEKCO_BrandCountryField__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_BrandCountryField__c</fullName>
    <label>Brand Country Field API Name</label>
    <helpText>Field on the brand object that holds the country code (e.g. ALH_Country__c).</helpText>
    <length>255</length>
    <type>Text</type>
</CustomField>