anonymization/main/default/objects/TEKCO_OrgConfig__mdt/fields/TEKCO_BrandLookupFieldOnRecord__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_BrandLookupFieldOnRecord__c</fullName>
    <label>Brand Lookup Field on Record</label>
<length>255</length>
    <type>Text</type>
</CustomField>