anonymization/main/default/objects/TEKCO_OrgConfig__mdt/fields/TEKCO_BrandObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_BrandObjectApiName__c</fullName>
    <label>Brand Object API Name</label>
    <helpText>Leave blank to use the TEKCO_Brand__c picklist on Account. Set to a SObject API name (e.g. ALH_Brand__c) to use a lookup object instead.</helpText>
    <length>255</length>
    <type>Text</type>
</CustomField>