anonymization/main/default/objects/TEKCO_OrgConfig__mdt/fields/TEKCO_BypassEnabled__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_BypassEnabled__c</fullName>
    <label>Bypass Triggers Enabled</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>