anonymization/main/default/objects/TEKCO_OrgConfig__mdt/fields/TEKCO_FunctionalIdField__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_FunctionalIdField__c</fullName>
    <label>Functional ID Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>